--- a/server/package.json
+++ b/server/package.json
@@ -12,8 +12,10 @@
   "license": "MIT",
   "dependencies": {
     "bcrypt": "^5.0.0",
+    "dotenv": "^16.0.0",
     "express": "^4.17.2",
-    "mongoose": "^5.9.10"
+    "mysql2": "^2.3.3",
+    "sequelize": "^6.17.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.6"
